overflow fix

--- a/src/stylesheets/universal.scss
+++ b/src/stylesheets/universal.scss
@@ -2,6 +2,7 @@
   font-size: 14px;
   font-family: 'Titillium';
   letter-spacing: 0.2px;
+  overflow-x: hidden;
 }
 .main {
   height: 100%;
